# bab-aat

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  build.Dockerfile  cfg_instructions.text  docker-compose.yml  main.db  manage.py  package-lock.json  pyproject.toml  requirements.yaml  setup.cfg  src - Shortcut.lnk  supervisord.conf
app/: main.py
app/routers/: data.py  upload.py
app/schemas/: pydantic_models.py
babaatsite/: asgi.py  celery.py  secret_utils.py  settings.py  urls.py  wsgi.py
main/: built_in_ocr_test.ipynb  detect_objs.py  main.py  models.py  page_to_img.py  pdf_img_pipeline.py  pdf_to_image.ipynb
main/configs/: pdf_img_pipeline_config.json  pdf_img_pipeline_config_local.json  pdf_img_recursion_test.json
main/experiments/: built_in_ocr_test.ipynb  find_ideal_network_size.ipynb  ideal_network_dims.md  paddle_ocr.ipynb  pdf_to_image.ipynb  pytesseract_img_to_bb.ipynb
main/inference/: detect_objs.py
main/intake/: detect_objs.py  pdf_img_pipeline.py
main/utils/: configs.py  darknet_wrapper.py  db_routing.py  extract_ocr_results.py  loggers.py  page_to_img.py
ocr/: admin.py  apps.py  config.py  draw_on_pdf.ipynb  forms.py  modal_funcs.py  models.py  storages.py  tasks.py  test.ipynb  urls.py  views.py
ocr/main/: models.py
ocr/migrations/: 0001_initial.py  0002_vessel_alter_document_vessel.py  0003_remove_document_file_path_remove_page_img_path_and_more.py  0004_truth_document_number_alter_truth_document.py  (+12 more)
resources/: agenda_2_4_25.md  annotation.md  meeting_9_3_25.md  requirements-gpu.yaml  requirements.yaml
(+78 files in other folders)
