[project]
name = "bab-aat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2",
    "django-cleanup>=9.0.0",
    "dotenv>=0.9.9",
    "ipykernel>=6.29.5",
    "opencv-python>=4.11.0.86",
    "openpyxl>=3.1.5",
    "paddleocr>=2.10.0",
    "paddlepaddle>=3.0.0",
    "pandas>=2.2.3",
    "pillow>=11.2.1",
    "pypdfium2>=4.30.1",
    "python-magic-bin>=0.4.14",
    "seaborn>=0.13.2",
    "setuptools>=78.1.0",
]
