[project]
name = "bab-aat"
version = "0.1.0"
description = "OCR Application for BAB"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=25.1.0",
    "celery[redis]>=5.5.1",
    "django>=5.2",
    "django-cleanup>=9.0.0",
    "django-storages[boto3]>=1.14.6",
    "dotenv>=0.9.9",
    "filelock>=3.18.0",
    "ipykernel>=6.29.5",
    "loguru>=0.7.3",
    "markdown>=3.8",
    "memory-profiler>=0.61.0",
    "modal>=1.0.2",
    "opencv-python==4.11.0.86",
    "openpyxl>=3.1.5",
    "paddleocr==3.0.0",
    "paddlepaddle==3.0.0",
    "pillow>=11.2.1",
    "psutil>=7.0.0",
    "psycopg2-binary>=2.9.10",
    "pympler>=1.1",
    "pymupdf>=1.26.0",
    "pypdfium2>=4.30.1",
    "python-magic >= 0.4.27; sys_platform != 'win32'",
    "python-magic-bin>=0.4.14; sys_platform == 'win32'",
    "seaborn>=0.13.2",
    "setuptools>=78.1.0",
    "supabase>=2.15.0",
    "uvicorn>=0.34.2",
    "whitenoise>=6.9.0",
]
